--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lat-long-para-is",
+  "name": "indice-solar",
   "version": "1.0.0",
-  "description": "",
+  "description": "Calcula média de índice solar das cidades brasileiras",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
-    "cheerio": "1.0.0-rc.12"
+    "cheerio": "1.0.0-rc.12",
+    "express": "^4.18.2"
   }
 }
