--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Calcula média de índice solar das cidades brasileiras",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
